[package]
name = "program"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "1.18.18"  # Update to match Solana CLI

[dev-dependencies]
solana-program-test = "1.18.18"  # Update to match Solana CLI
solana-sdk = "1.18.18"  # Update to match Solana CLI

[lib]
crate-type = ["cdylib", "lib"]